Header height and menu readability fixes

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -24,7 +24,7 @@ $font-size-bigger: 24px;
 $portrait-height: 470px;
 
 $break-small: 749px;
-$break-menu: 749px;
+$break-menu: 789px;
 
 h1, h2, h3, h4 {
   font-family: 'Josefin Sans', sans-serif;
@@ -71,6 +71,7 @@ a {
     padding: 10px;
     width: $column-10;
     margin: 1% auto 5% auto;
+    min-width: 315px;
     p {
       font-family: 'Alegreya Sans', sans-serif;
       text-align: justify;
@@ -93,6 +94,9 @@ a {
     padding-bottom: 1.2em;
     margin: 0;
     background-color: #56848E;
+    @media screen and (max-width: $break-menu - 1) {
+      padding-bottom: 0px;
+    }
     &:after {
       content: "";
       width: 100%;
@@ -141,9 +145,10 @@ a {
       display: inline-block;
     }
     li {
-      font-family: 'Raleway', sans-serif;
+      font-family: 'Josefin Sans', sans-serif;
       font-weight: bold;
       cursor: pointer;
+      color: white;
       @media screen and (min-width: $break-menu) {
         display: inline-block;
         text-align: center;
@@ -215,8 +220,8 @@ a {
 
   &-intro.copy-text {
     background: rgba(255, 255, 255, .5);
-    width: 40%;
-    margin: 10% 30% 0 30%;
+    // width: 40%;
+    margin: 10% 15% 0 15%;
     padding: 1%;
     @media screen and (max-width: $break-small) {
       margin: 0;
